<resources>
    <string name="app_name">Telegram_Task</string>
    <string name="qr">QR</string>
    <string name="more">More</string>
    <string name="status">Online</string>
    <string name="search">Search</string>
    <string name="add_a_few_words_about_yourself">Add a few words about yourself</string>
    <string name="profile_image">profile image</string>
    <string name="big_image">big image</string>
    <string name="user_name">Abanoub Nagy Azmy</string>
    <string name="account">account</string>
    <string name="phone_number">+201270900418</string>
    <string name="tap_to_change_phone_number">Tap to change phone number</string>
    <string name="user_name_title">BeboNagy</string>
    <string name="set_username">Username</string>
    <string name="bio">Bio</string>
    <string name="devices">devices</string>
    <string name="chat_folders">chat_folders</string>
    <string name="power_saving">power_saving</string>
    <string name="data_and_storage">data_and_storage</string>
    <string name="notifications_and_sounds">notifications_and_sounds</string>
    <string name="privacy_and_security">privacy_and_security</string>
    <string name="chat_settings">chat_settings</string>
    <string name="settings">settings</string>
</resources>