<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/qr"
        android:icon="@drawable/ic_qr_code_24"
        android:contentDescription="@string/qr"
        android:title="@string/qr"
        app:showAsAction="always" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_24"
        android:contentDescription="@string/search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_more_vert_24"
        android:contentDescription="@string/more"
        android:title="@string/more"
        app:showAsAction="always" />

</menu>