<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/big_image"
        android:layout_width="@dimen/image_circle"
        android:layout_height="@dimen/image_circle"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:alpha="0"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_profile"
        android:layout_width="@dimen/image_circle"
        android:layout_height="@dimen/image_circle"
        android:layout_marginStart="@dimen/margin_normal"
        android:contentDescription="@string/profile_image"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_image"
        app:layout_constraintBottom_toBottomOf="@+id/big_image"
        app:layout_constraintEnd_toEndOf="@+id/big_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/big_image"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/big_image"
        app:layout_constraintStart_toEndOf="@+id/big_image"
        app:layout_constraintTop_toTopOf="@+id/big_image">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/statusColor"
            android:textSize="@dimen/text_caption" />
    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/app_bar"
        app:navigationIcon="@drawable/ic_arrow_back_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guid_line">

        <TextView
            android:id="@+id/account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/account"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_caption"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:paddingStart="@dimen/normal_padding"
            android:text="@string/phone_number"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/account"
            app:layout_constraintTop_toBottomOf="@+id/account" />

        <TextView
            android:id="@+id/tap_to_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:paddingStart="@dimen/normal_padding"
            android:text="@string/tap_to_change_phone_number"
            android:textColor="@color/hint"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="@+id/phone_number"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="?android:attr/listDivider"
            android:paddingStart="@dimen/normal_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tap_to_change" />


        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:paddingStart="@dimen/normal_padding"
            android:text="@string/user_name_title"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line1"
            app:layout_constraintTop_toBottomOf="@+id/line1" />

        <TextView
            android:id="@+id/set_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:paddingStart="@dimen/normal_padding"
            android:text="@string/set_username"
            android:textColor="@color/hint"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="?android:attr/listDivider"
            android:paddingStart="@dimen/normal_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/set_username" />


        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:paddingStart="@dimen/normal_padding"
            android:text="@string/bio"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_normal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line2" />

        <TextView
            android:id="@+id/about_yourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_tiny"
            android:paddingHorizontal="@dimen/normal_padding"
            android:text="@string/add_a_few_words_about_yourself"
            android:textColor="@color/hint"
            android:textSize="@dimen/text_small"
            app:layout_constraintStart_toStartOf="@+id/about"
            app:layout_constraintTop_toBottomOf="@+id/about" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_yourself" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/settings"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_caption"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/line3" />

        <LinearLayout
            android:id="@+id/chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/chat_settings"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chat">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/privacy_and_security"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/notifications_and_sounds"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/data_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/data_and_storage"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data_storage">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/power_saving"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/folder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/power">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/chat_folders"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/folder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/devices"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_normal" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>